log/build_2022-05-13_18-51-57/xsens_driver/stderr.log
  File "/app/dev_ws/install/xsens_driver/lib/python3.8/site-packages/xsens_driver/xsens_measure.py", line 278
    print(f"input {self.sta_sw_msg.sync_in} output {self.sta_sw_msg.sync_out})
                                                                             ^
SyntaxError: EOL while scanning string literal

